--- a/src/App.css
+++ b/src/App.css
@@ -27,10 +27,10 @@
   flex: 0 1 25%;
   justify-content: center;
   align-items: center;
-  background-color: #ccc;
+  background-color: #fff;
   font-size: 1.25em;
   font-weight: 800;
-  color: #494949;
+  color: #3fa8c0;
   height: 4em;
   width: 4em;
   border-radius: 1em;
@@ -42,4 +42,3 @@
   cursor: pointer;
   opacity: 0.85;
 }
-
