--- a/src/css/App.module.css
+++ b/src/css/App.module.css
@@ -1,4 +1,4 @@
-.App-Container {
+.AppContainer {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -9,20 +9,20 @@
   color: white;
 }
 
-.Board-Container {
+.BoardContainer {
   display: flex;
   flex-direction: column;
   margin: 0.5em auto;
 }
 
-.Board-Row {
+.BoardRow {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
 }
 
-.Board-Square {
+.BoardSquare {
   display: flex;
   flex: 0 1 25%;
   justify-content: center;
@@ -38,7 +38,7 @@
   padding: 0.15em;
 }
 
-.Board-Square:hover {
+.BoardSquare:hover {
   cursor: pointer;
   opacity: 0.85;
 }
