--- a/src/css/App.module.css
+++ b/src/css/App.module.css
@@ -36,9 +36,38 @@
   border-radius: 1em;
   margin: 0.15em;
   padding: 0.15em;
+  box-shadow: #29282d 0.15em 0.15em 0.25em;
 }
 
 .BoardSquare:hover {
   cursor: pointer;
   opacity: 0.85;
+}
+
+.GameControlsContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.GameControlContainer {
+  padding: 0.25em;
+  height: auto;
+  width: auto;
+  cursor: pointer;
+  background-color: transparent;
+  margin: 0.15em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.GameControlContainer > svg:hover {
+  fill: #3fa8c0;
+}
+
+.GameControlLabel {
+  font-size: 0.5em;
+  margin: 0.5em auto;
 }
